# manga-forge

./: .env.example  .gitignore  Makefile  README.md
apps/api/: alembic.ini  pyproject.toml
apps/api/alembic/: env.py
apps/api/app/: config.py  database.py  logging_utils.py  main.py
apps/api/app/core/: dependencies.py  image_backend.py  layout_engine.py  llm.py  vector_store.py
apps/api/app/middleware/: response_wrapper.py
apps/api/app/models/: __init__.py  asset.py  asset_image.py  branch.py  episode.py  episode_external_ref.py  episode_memory.py  episode_page.py  generated_image.py  generation_run.py  import_job.py  import_job_item.py  panel.py  pit.py  project.py  source_binding.py
apps/api/app/prompts/: consistency_check.py  script_generate.py  summarize.py
apps/api/app/providers/: __init__.py  mangadex.py
apps/api/app/routers/: assets.py  branches.py  episodes.py  generation.py  imports.py  memory.py  pits.py  projects.py  storage.py
apps/api/app/schemas/: __init__.py  asset.py  branch.py  common.py  episode.py  generation.py  imports.py  pit.py  project.py  storyboard.py  understanding.py
apps/api/app/services/: __init__.py  asset_service.py  branch_service.py  episode_service.py  generation_service.py  import_service.py  memory_service.py  pit_service.py  project_service.py  storage_service.py
apps/api/tests/: test_mangadex_service.py
apps/web/: package-lock.json  package.json
apps/web/src/: App.tsx  index.css  main.tsx
apps/web/src/layouts/: AppLayout.tsx
apps/web/src/pages/EpisodeDetail/: index.tsx
apps/web/src/pages/GenerationStudio/: index.tsx
apps/web/src/pages/Home/: index.tsx
apps/web/src/pages/MangaDexImport/: index.tsx
apps/web/src/services/: api.ts  project.ts
apps/web/src/stores/: app.ts
docker/: docker-compose.dev.yml  docker-compose.yml
docker/mysql/: init.sql
docs/: PRD.md  architecture.md  design.md
docs/spider/: managdex.md
workers/: celery_app.py  pyproject.toml
workers/pipelines/: continue_pipeline.py  generate_pipeline.py  import_pipeline.py  writeback_pipeline.py
workers/tasks/: layout.py  mangadex.py  ocr.py  render.py  script_gen.py  understand.py  writeback.py
(+2 files in other folders)
